<resources>
    <string name="app_name">Money Tracker</string>
    <string name="name_hint">Название</string>
    <string name="money_sign">Р</string>
    <string name="amount_hint">0</string>
    <string name="rouble">Р</string>
    <string name="expenses">расходы</string>
    <string name="expenses_title">Расходы</string>
    <string name="incomes">доходы</string>
    <string name="incomes_title">Доходы</string>
    <string name="balance">Баланс</string>
    <string name="period">" за период"</string>
    <string name="error">Произошла ошибка</string>
    <string name="money_tracker">Учет бюджета</string>
    <string name="add_item">Новая запись</string>
    <string name="confirm_remove">Удалить выделенные элементы?</string>
    <string name="items_selected">выбрано</string>
    <string name="auth_text">Ваш незаменимый помощник \n в управлении бюджетом</string>
    <string name="your_balance">ваш баланс\n за выбранный период</string>
    <string name="price">%1$d Р</string>
    <string name="action_choose_time_lapse">Выберите период</string>
    <string name="time_lapse_day">День</string>
    <string name="time_lapse_month">Месяц</string>
    <string name="time_lapse_year">Год</string>
    <string name="time_lapse_all">Все</string>
    <string name="action_show_balance">Баланс за выбранный период</string>
    <string name="action_categories">Показать категории</string>
    <string name="title_activity_categories">CategoriesActivity</string>
    <string name="categories">Категории</string>
    <string name="choose_category">Выберите категорию</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="expenses_base_category">Расходы без категории</string>
    <string name="income_base_category">Доходы без категории</string>
    <string name="food_category">Еда</string>
    <string name="home_category">Жилье</string>
    <string name="car_category">Машина</string>
    <string name="entertainment_category">Развлечения</string>
    <string name="communication_category">Связь</string>
    <string name="salary_category">Зарплата</string>
    <string name="choose_time_lapse">Выбрать период</string>
    <string name="confirm_remove_category">Удалить выбранную категорию?</string>
    <string name="add_new_category">Добавить новую категорию</string>
    <string name="category_name">Название категории</string>
    <string name="day">день:</string>
    <string name="month">месяц:</string>
    <string name="year">год:</string>
    <string name="set_date">Установить дату</string>
    <string name="remove_category">Удалить категорию</string>
    <string name="remove_elements">Удалить выбранные элементы</string>

    <array name="main_pager_titles">
        <item>@string/expenses</item>
        <item>@string/incomes</item>
    </array>

</resources>
