<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_pattern"
    tools:context="com.ivanchug.moneytracker.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@android:color/white"
        android:paddingStart="@dimen/margin_l"
        android:paddingEnd="@dimen/margin_l">

        <EditText
            android:id="@+id/name"
            android:layout_width="@dimen/zero_size"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/name_hint"
            android:textSize="@dimen/text_size"
            android:maxLines="1"
            android:inputType="text"
            android:background="@android:color/transparent"
            android:layout_gravity="center_vertical" />

        <EditText
            android:id="@+id/amount"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:hint="@string/amount_hint"
            android:textSize="@dimen/text_size"
            android:inputType="number"
            android:background="@android:color/transparent"
            android:layout_gravity="center_vertical"
            android:gravity="end" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/money_sign"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/margin_l" />

        <TextView
            android:id="@+id/add"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+"
            android:textSize="40sp"
            android:paddingStart="@dimen/margin_l"
            android:layout_gravity="center_vertical"
            tools:ignore="HardcodedText" />

    </LinearLayout>


</FrameLayout>
