<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.ivanchug.moneytracker.AddActivity"
    style="@style/AppBackground">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@android:color/white"
            android:paddingStart="@dimen/margin_l"
            android:paddingEnd="@dimen/margin_l">

            <EditText
                android:id="@+id/add_name"
                android:layout_width="@dimen/zero_size"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/name_hint"
                android:textSize="@dimen/text_size"
                android:maxLines="1"
                android:inputType="text"
                android:background="@android:color/transparent"
                android:layout_gravity="center_vertical" />

            <EditText
                android:id="@+id/add_amount"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:hint="@string/amount_hint"
                android:textSize="@dimen/text_size"
                android:maxLines="1"
                android:inputType="number"
                android:background="@android:color/transparent"
                android:layout_gravity="center_vertical"
                android:gravity="end" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rouble"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/margin_l" />

            <TextView
                android:id="@+id/add"
                android:enabled="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:textSize="40sp"
                android:paddingStart="@dimen/margin_l"
                android:layout_gravity="center_vertical"
                tools:ignore="HardcodedText" />

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/set_date_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@android:color/white"
        android:paddingStart="@dimen/margin_l"
        android:paddingEnd="@dimen/margin_l"
        android:paddingTop="@dimen/margin_small"
        android:paddingBottom="@dimen/margin_small">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/day"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/text_medium"
            android:gravity="end"
            android:layout_weight="1"
            android:maxLines="1" />

        <EditText
            android:id="@+id/set_day"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:maxLines="1"
            android:maxLength="2"
            android:inputType="number"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/text_medium"
            android:gravity="end"
            android:maxLines="1" />

        <EditText
            android:id="@+id/set_month"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:maxLines="1"
            android:maxLength="2"
            android:inputType="number"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/text_medium"
            android:gravity="end"
            android:layout_weight="1"
            android:maxLines="1" />

        <EditText
            android:id="@+id/set_year"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:maxLines="1"
            android:maxLength="4"
            android:inputType="number"
            android:layout_gravity="center_vertical" />

        <ImageView
            android:id="@+id/set_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_margin="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_small"
            android:src="@drawable/time_lapse_ok" />


    </LinearLayout>

    <FrameLayout
        android:id="@+id/date_shadow"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorShadow" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/categories_in_add_activity"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="@dimen/margin_small"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorShadow" />

    <android.support.v7.widget.CardView
        android:id="@+id/new_category_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@android:color/white"
            android:paddingStart="@dimen/margin_l"
            android:paddingEnd="@dimen/margin_l">

            <EditText
                android:id="@+id/new_category_name"
                android:layout_width="@dimen/zero_size"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/text_size"
                android:maxLines="1"
                android:inputType="text"
                android:background="@android:color/transparent"
                android:layout_gravity="center_vertical"
                android:hint="@string/category_name" />


            <TextView
                android:id="@+id/add_category"
                android:enabled="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:textSize="40sp"
                android:paddingStart="@dimen/margin_l"
                android:layout_gravity="center_vertical"
                tools:ignore="HardcodedText" />

        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>
